--- a/WordGuessingClient/MainWindow.xaml
+++ b/WordGuessingClient/MainWindow.xaml
@@ -10,11 +10,11 @@
         <Label Content="IP Address:" HorizontalAlignment="Left" Margin="97,87,0,0" VerticalAlignment="Top"/>
         <Label Content="Port Number:" HorizontalAlignment="Left" Margin="84,118,0,0" VerticalAlignment="Top"/>
         <Label Content="Username:" HorizontalAlignment="Left" Margin="99,56,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Margin="180,60,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="180,91,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="180,122,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="260,170,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Margin="453,60,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="299" Height="239"/>
+        <TextBox x:Name="playerName" HorizontalAlignment="Left" Margin="180,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="serverAddress" HorizontalAlignment="Left" Margin="180,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="serverPort" HorizontalAlignment="Left" Margin="180,122,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="submitBtn" Content="Submit" HorizontalAlignment="Left" Margin="260,160,0,0" VerticalAlignment="Top" Click="submitBtn_Click"/>
+        <TextBox x:Name="serverMessage" HorizontalAlignment="Left" Margin="453,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="299" Height="239"/>
 
     </Grid>
 </Window>
