--- a/WordGuessingClient/MainWindow.xaml
+++ b/WordGuessingClient/MainWindow.xaml
@@ -13,11 +13,13 @@
         <TextBox x:Name="playerName" HorizontalAlignment="Left" Margin="180,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="serverAddress" HorizontalAlignment="Left" Margin="180,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="serverPort" HorizontalAlignment="Left" Margin="180,122,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="submitBtn" Content="Submit" HorizontalAlignment="Left" Margin="260,160,0,0" VerticalAlignment="Top" Click="submitBtn_Click"/>
+        <Button x:Name="submitBtn" Content="Submit" HorizontalAlignment="Left" Margin="258,197,0,0" VerticalAlignment="Top" Click="submitBtn_Click"/>
         <TextBox x:Name="userGuess" HorizontalAlignment="Left" Margin="453,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="299" Height="239"/>
-        <Label x:Name="wordBank" Content="Word Bank:" HorizontalAlignment="Left" Margin="180,18,0,0" VerticalAlignment="Top" Width="572"/>
+        <Label x:Name="wordBank" Content="Word Bank:" HorizontalAlignment="Left" Margin="180,370,0,0" VerticalAlignment="Top" Width="572"/>
         <Label x:Name="numOfWords" Content="Words Remaining:" HorizontalAlignment="Left" Margin="453,339,0,0" VerticalAlignment="Top" Width="163"/>
         <Button x:Name="submitGuessBtn" Content="Submit Guess" HorizontalAlignment="Left" Margin="453,314,0,0" VerticalAlignment="Top" Click="submitGuessBtn_Click"/>
-
+        <Slider x:Name="timeLimit" HorizontalAlignment="Left" Margin="180,162,0,0" VerticalAlignment="Top" Width="127" ValueChanged="timeLimit_ValueChanged"/>
+        <TextBlock x:Name="timeLimitValue" HorizontalAlignment="Left" Margin="312,163,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="0"/><LineBreak/><Run/></TextBlock>
+        <Label Content="Time Limit (minutes):" HorizontalAlignment="Left" Margin="45,158,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
