added a hint to the game.

--- a/WordGuessingClient/MainWindow.xaml
+++ b/WordGuessingClient/MainWindow.xaml
@@ -29,5 +29,6 @@
         <TextBlock x:Name="tbAddress" Visibility="Hidden" HorizontalAlignment="Left" Margin="180,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock x:Name="tbPort" Visibility="Hidden" HorizontalAlignment="Left" Margin="180,123,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock x:Name="tbAnswer" Visibility="Hidden" HorizontalAlignment="Left" Margin="544,316,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="78"/>
+        <TextBlock x:Name="tbHint" Visibility="Hidden" HorizontalAlignment="Left" Margin="10,8,0,0" TextWrapping="Wrap" Text="HINT: Not all the words present in the word bank are a counted as a correct answer." VerticalAlignment="Top"/>
     </Grid>
 </Window>
